updated professional experience description

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -44,7 +44,7 @@ urlcolor: blue
 
 **PhD**, Educational Psychology & Educational Technology \hfill Expected 2020
 
-  * \* Dissertation: *Into the edu-verse: New teachers’ agency in self-directed learning with social media*
+  * \* Dissertation: *Into the edu-verse: New teachers seeking induction support on social media*
   * \* Committee: Matthew Koehler, Christine Greenhow, Ralph Putnam, Gail Richmond
   * \* Defended proposal: November 26, 2019
   
@@ -369,7 +369,7 @@ Educational Technology and Learning Design program
 **Founding National Director, Ministry in Digital Spaces** \hfill 2014-2017  
 InterVarsity Christian Fellowship/USA \hfill United States
 
-* \* Managed 51 projects related to online community building
+* \* Managed 51 projects related to online community building through video games and social media
 * \* Supervised 8 project leads
 * \* Hosted and directed 5 think tank gatherings (Atlanta, Austin, San Francisco)
 
