updated professional experience description

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -364,7 +364,7 @@ http://www.blackingaming.com/
 Concordia University, College of Education \hfill Portland OR  
 Educational Technology and Learning Design program
 
-* \* Wrote course: *The Evolving Landscape of Educational Technology* (Master's)
+* \* Wrote and designed all materials for a new Master's-level course: The Evolving Landscape of Educational Technology
 
 **Founding National Director, Ministry in Digital Spaces** \hfill 2014-2017  
 InterVarsity Christian Fellowship/USA \hfill United States
