added new publication

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -9,7 +9,7 @@ geometry: margin=1in
 
 author: K. Bret Staudt Willet
 
-jobtitle: "PhD Candidate, Michigan State University"
+jobtitle: "Ph.D. Candidate, Michigan State University"
 # address: ""
 fontawesome: yes
 
@@ -42,18 +42,18 @@ urlcolor: blue
 
 ## Michigan State University
 
-**PhD**, Educational Psychology & Educational Technology \hfill Expected 2020
+**Ph.D.**, Educational Psychology & Educational Technology \hfill Expected 2020
 
   * \* Dissertation: *Into the edu-verse: New teachers seeking induction support on social media*
   * \* Committee: Matthew Koehler, Christine Greenhow, Ralph Putnam, Gail Richmond
   * \* Defended proposal: November 26, 2019
 
-**MA**, Educational Technology \hfill 2015  
+**M.A.**, Educational Technology \hfill 2015  
 **Graduate Certificate**, Serious Game Design and Research \hfill 2014
 
 ## Bucknell University
 
-**BA**, Mathematics & Sociology \hfill 2003
+**B.A.**, Mathematics & Sociology \hfill 2003
 
 ---
 
@@ -81,7 +81,9 @@ Society for Information Technology & Teacher Education (SITE) International Conf
 
 # Research
 
-## Peer-Reviewed Journal Articles (10)
+## Peer-Reviewed Journal Articles (11)
+
+**Staudt Willet**, K. B., & Carpenter, J. P. (in press). A tale of two subreddits: Change and continuity in teaching-related online spaces. *British Journal of Educational Technology*.
 
 Greenhalgh, S. P., Rosenberg, J. M., **Staudt Willet**, K. B., Koehler, M. J., & Akcaoglu, M. (2020). Identifying multiple learning spaces within a single teacher-focused Twitter hashtag. *Computers and Education*. https://doi.org/10.1016/j.compedu.2020.103809
 
@@ -107,7 +109,7 @@ Greenhow, C. M., Gleason, B., Marich, H., & **Staudt Willet**, K. B. (2017). Edu
 
 **Staudt Willet**, K. B. (in press). The hashtag-thread mashup: Differences in Twitter #Edchat replies. In D. C. Gibson & M. N. Ochoa (Eds.), *Research highlights in technology and teacher education 2020*. Association for the Advancement of Computing in Education (AACE). [Invited revision of conference presentation in an edited book]
 
-Greenhalgh, S. P., Koehler, M. J., Rosenberg, J. M., & **Staudt Willet**, K. B. (2020). Considerations for using social media data in learning design and technology research. In E. Romero-Hall (Ed.), *Research methods in learning design & technology*. Routledge.
+Greenhalgh, S. P., Koehler, M. J., Rosenberg, J. M., & **Staudt Willet**, K. B. (2021). Considerations for using social media data in learning design and technology research. In E. Romero-Hall (Ed.), *Research methods in learning design & technology*. Routledge.
 
 Greenhow, C. M., Galvin, S., & **Staudt Willet**, K. B. (2020). Research methods unique to digital contexts: An introduction to virtual ethnography. In N. K. Duke & M. H. Mallette (Eds.), *Literacy research methodologies* (3rd ed.). Guilford. 
 
@@ -261,9 +263,11 @@ Michigan State University, Dept. of Counseling, Educational Psychology, & Specia
 * \* Students playfully explore Google Apps, course management systems, screencasting tools, and file management systems.
 * \* The semester-long project is to design a curriculum for an *online course module* consisting of 3-5 interconnected lessons, which may include training sessions or non-traditional courses.
 
-## Instructional Activities & Workshops (14)
+## Instructional Activities & Workshops (15)
 
-**Staudt Willet**, K. B. (2020, October). *Welcome to the good place?: Teachers' networked learning on social media* [Guest lecture for Master's course]. Teaching with Technology, Manhattanville College, Purchase, NY. https://bretsw.github.io/manhattanville-lecture/
+**Staudt Willet**, K. B. (2020, October). *You are stronger than you think: Insights for academic publishing* [Guest lecture for doctoral course]. CEP 956: Mind, Media and Learning, Michigan State University: East Lansing, MI. https://bretsw.github.io/publishing-lecture
+
+**Staudt Willet**, K. B. (2020, October). *Welcome to the good place?: Teachers' networked learning on social media* [Guest lecture for Master's course]. Teaching with Technology, Manhattanville College, Purchase, NY. https://bretsw.github.io/manhattanville-lecture
 
 Budhrani, K., Ross, K., Muljana, P., Dyer, R., Jones, M., & **Staudt Willet**, K. B. (2020, November). *Factors influencing doctoral students’ perseverance in online instructional technology programs* [Panel]. Association for Educational Communications and Technology (AECT) International Convention 2020, Online.
 
