added interests section

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -22,8 +22,6 @@ web: bretsw.com
 # phone: ""
 updated: yes
 
-keywords: networked learning, learning analytics, online communities, social media
-
 fontfamily: mathpazo
 fontfamilyoptions: sc, osf
 fontsize: 9pt
@@ -34,7 +32,24 @@ urlcolor: blue
 # http://svmiller.com/blog/2016/03/svm-r-markdown-cv/
 # https://github.com/svmiller/svm-r-markdown-templates
 
-# Rmarkdown guide: https://rmarkdown.rstudio.com/authoring_basics.html
+---
+
+# Interests
+
+**Networked Learning, as understood through:**
+
+* \* **Online communities:** communities of practice, professional learning networks
+* \* **Social media modalities:** online learning environments, affinity spaces, learning ecologies
+* \* **Educational data mining:** digital traces, big data
+* \* **Learning analytics:** social network analysis, discourse analysis, natural language processing
+
+**Projects:**
+
+* \* Educational Twitter Hashtags
+* \* Teaching-Related Subreddits
+* \* New Teachers' Social Media Use During Induction
+* \* Social Scholarship
+* \* Data Science in Education
 
 ---
 
@@ -46,7 +61,7 @@ urlcolor: blue
 
   * \* Dissertation: *Into the edu-verse: New teachers seeking induction support on social media*
   * \* Committee: Matthew Koehler, Christine Greenhow, Ralph Putnam, Gail Richmond
-  * \* Defended proposal: November 26, 2019
+  * \* Proposal defended: November 26, 2019
 
 **M.A.**, Educational Technology \hfill 2015  
 **Graduate Certificate**, Serious Game Design and Research \hfill 2014
@@ -83,7 +98,7 @@ Society for Information Technology & Teacher Education (SITE) International Conf
 
 ## Peer-Reviewed Journal Articles (12)
 
-**Staudt Willet**, K. B., & Carpenter, J. P. (in press). A tale of two subreddits: Change and continuity in teaching-related online spaces. *British Journal of Educational Technology*.
+**Staudt Willet**, K. B., & Carpenter, J. P. (in press). A tale of two subreddits: Change and continuity in teaching-related online spaces. *British Journal of Educational Technology*. https://doi.org/10.1111/bjet.13051
 
 Rosenberg, J. M., & **Staudt Willet**, K. B. (in press). Balancing participants’ privacy and open science in the context of COVID-19: A response to Ifenthaler & Schumacher (2016). *Educational Technology Research and Development*.
 
@@ -239,7 +254,7 @@ Michigan State University, Dept. of Counseling, Educational Psychology, & Specia
 
 # Teaching
 
-## Courses Taught (4)
+## Courses Taught
 
 **Teaching & Learning with Technology** (Undergraduate, online, 6x) \hfill 2017-present
 
@@ -299,14 +314,14 @@ Romero-Hall, E., Arslan-Ari, I., Gentry, W., Greenhalgh, S., Jung, Y. J., Stefan
 
 ## Mentoring and Advising
 
-\* Graduate mentor, *Undergraduate course instruction* (Madison Allen, MSU) \hfill 2020  
-\* Graduate mentor, *Master's course instruction* (William Bork, MSU) \hfill 2019-2020  
-\* Peer reviewer, *National Science Foundation (NSF) grant proposal* (Dr. Joshua Rosenberg, University of Tennessee, Knoxville) \hfill 2019  
-\* Doctoral student member, *Research apprenticeship practicum committee* (Sarah Galvin, MSU) \hfill 2018-2019  
-\* Graduate mentor, *Undergraduate course instruction* (Matthew Drazin, MSU) \hfill 2018-2019  
-\* Data analyst, *Social network analysis for doctoral project* (Katie Schenkel, MSU) \hfill 2018  
-\* Data analyst, *Content analysis for doctoral dissertation* (Colin Terry, MSU) \hfill 2018  
-\* Graduate mentor, *Undergraduate course instruction* (Sukanya Moudgalya, MSU) \hfill 2017-2018
+* \* Graduate mentor, *Undergraduate course instruction* (Madison Allen, MSU) \hfill 2020
+* \* Graduate mentor, *Master's course instruction* (William Bork, MSU) \hfill 2019-2020
+* \* Peer reviewer, *NSF grant proposal* (Dr. Josh Rosenberg, Univ. of Tennessee, Knoxville) \hfill 2019
+* \* Doctoral student member, *Research apprenticeship practicum committee* (Sarah Galvin, MSU) \hfill 2018-2019
+* \* Graduate mentor, *Undergraduate course instruction* (Matthew Drazin, MSU) \hfill 2018-2019
+* \* Data analyst, *Social network analysis for doctoral project* (Katie Schenkel, MSU) \hfill 2018
+* \* Data analyst, *Content analysis for doctoral dissertation* (Colin Terry, MSU) \hfill 2018
+* \* Graduate mentor, *Undergraduate course instruction* (Sukanya Moudgalya, MSU) \hfill 2017-2018
 
 ---
 
@@ -314,9 +329,9 @@ Romero-Hall, E., Arslan-Ari, I., Gentry, W., Greenhalgh, S., Jung, Y. J., Stefan
 
 ## Journal Article Reviews (5)
 
-\* *American Journal of Education* (2) \hfill 2019-2020  
-\* *Internet and Higher Education* (2) \hfill 2019  
-\* *Learning, Media and Technology*, with Dr. Christine Greenhow, faculty reviewer \hfill 2016
+* \* *American Journal of Education* (2) \hfill 2019-2020
+* \* *Internet and Higher Education* (2) \hfill 2019
+* \* *Learning, Media and Technology*, with Dr. Christine Greenhow, faculty reviewer \hfill 2016
 
 ## Service in Professional Organizations
 
@@ -358,24 +373,24 @@ Romero-Hall, E., Arslan-Ari, I., Gentry, W., Greenhalgh, S., Jung, Y. J., Stefan
 
 # Professional Experience
 
-**Graduate Assistant/Instructor** \hfill 2017-present  
+**Executive Coach** \hfill 2020-present  
+Black in Gaming \hfill United States
+
+* \* Trained and mentored members of the core leadership team
+* \* Designed and implemented strategy for organizational culture and collaboration through remote and asynchronous work
+
+**Graduate Assistant/Instructor** \hfill 2017-2020  
 Michigan State University, College of Education \hfill East Lansing MI  
 Department of Counseling, Educational Psychology, & Special Education
 
 * \* Taught courses at Master's and Undergraduate levels
-
-**Executive Coach** \hfill 2020-present  
-Black in Gaming \hfill United States  
-http://www.blackingaming.com/
-
-* \* Trained and mentored members of the core leadership team
-* \* Designed and implemented strategy for organizational culture and collaboration through remote and asynchronous work
+* \* Graduate mentor for less experienced teaching assistants
 
 **Course Writer** \hfill 2019  
 Concordia University, College of Education \hfill Portland OR  
 Educational Technology and Learning Design program
 
-* \* Wrote and designed all materials for a new Master's-level course: The Evolving Landscape of Educational Technology
+* \* Wrote and designed all materials for a new Master's-level course: *The Evolving Landscape of Educational Technology*
 
 **Founding National Director, Ministry in Digital Spaces** \hfill 2014-2017  
 InterVarsity Christian Fellowship/USA \hfill United States
